# EarthOS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json
.github/workflows/: ci.yml
deploy/nginx/: nginx.conf
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  DATA_LAYER.md  DATA_SOURCES.md  DEPLOYMENT.md  GAP_MATRIX_STATUS.md  LIVE_DATA_SETUP.md  REMAINING_WORK.md  SECURITY.md  SELF_HOSTING.md
e2e/: api.spec.ts  findings.spec.ts  smoke.spec.ts
scripts/: backup-db.mjs  preflight.mjs  restore-drill.mjs  seed-cctv.mjs  start-e2e.mjs  verify-live-data.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Badge.tsx  CctvSnapshotViewer.tsx  CommandPalette.tsx  EarthViewHome.tsx  EntityDetailPanel.tsx  FilterBar.tsx  FindingsBadge.tsx  FreshnessBadge.tsx  GlobeDashboard.tsx  MapView.tsx  MapplsCityMap.tsx  ModuleView.tsx  Nav.tsx  NotificationCenter.tsx  OrbitGlobe.tsx  PdfViewer.tsx  PriceChart.tsx  ReaderPane.tsx  SolarSystem.tsx  StreetViewPanel.test.ts  StreetViewPanel.tsx  ThemeToggle.tsx  VariantSwitcher.tsx
src/lib/: ai.ts  article-cache.ts  graph.ts  modules.ts  situation.test.ts  situation.ts  types.ts
supabase/: config.toml  schema.sql
supabase/migrations/: 004_dashboard_panels.sql  005_observations_tracks.sql  006_provider_governance.sql  007_alerts_search_ops.sql  (+2 more)
workers/connector-rs/: Cargo.toml
workers/connector-rs/src/: main.rs
(+243 files in other folders)
