[package]
name = "argus-desktop"
version = "2.0.0"
description = "Argus desktop shell"
authors = ["Argus"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[lib]
name = "argus_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "argus-desktop"
path = "src/main.rs"
