[package]
name = "earthos-connector-worker"
version = "0.1.0"
edition = "2021"
description = "EarthOS external connector worker — polls public APIs and POSTs to the ingest API"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
